* numeric.c (rb_infinity, rb_nan): use union to prevent bus error   caused by misalignment.  [Bug #5469] [ruby-dev:44657] * include/ruby/missing.h (INFINITY, NAN): ditto

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33502 b2dd03c8-39d4-4d8f-98ff-823fe69b080e